2014-10-02  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/incidents/incident_dashboard_detail.php,
	  operation/common/download_file.php: Now the ticket creator
	and assigned users can download their ticket files and acccess
	to the quick ticket update as IW although they haven't permissions
	on that group.

2014-10-02  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/ajax/incidents.php: Now the functions to do the
	quick update of a ticket change correctly the ticket last
	update value.

2014-10-02  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  integriadb_data.sql
	  include/functions_crm.php
	  operation/contracts/contract_detail.php: Improved contract
	view to attach files. Ticket #1385.
	  
	* extras/mr/13.sql: Added file.

2014-09-22  Vanessa Gil <vanessa.gil@artica.es>
	
	* extras/create_ticket_form.php: Added file.
	Creation of tickets through a web form. Ticket #1218.

2014-09-11  Vanessa Gil <vanessa.gil@artica.es>
	
	* godmode/setup/setup.php
	  include/ajax.php
	  include/js/integria.js: Fixed license info in setup.
	Ticket #1266.

2014-09-10  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/search.php: Fixed problem in 
	free search. Ticket #1264.

2014-09-10  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions.php: Fixed problem when
	you login with a user without group assigned.

2014-09-09  Vanessa Gil <vanessa.gil@artica.es>
	
	* godmode/usuarios/configurar_usuarios.php
	  include/functions_config.php
	  include/functions_incidents.php: Removed warnings to 
	run integria cron. Tickets #1256.

2014-08-28  Vanessa Gil <vanessa.gil@artica.es>
	
	* index.php: Fixed several bugs. Tickets #1214, #1215.

2014-08-27  Vanessa Gil <vanessa.gil@artica.es>
	
	* index.php: Show custom screen instead of
	home page.

2014-08-27  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/incidents/incident_detail.php: Fixed bug
	#1208.

2014-08-25  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/ajax/crm.php